<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/student_photo_description" />

    <EditText
        android:id="@+id/editTextSurname"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/student_surname_hint"
        android:singleLine="true"
        android:inputType="textCapSentences" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editTextFirstname"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/student_firstname_hint"
        android:singleLine="true"
        android:inputType="textCapSentences" />

    <EditText
        android:id="@+id/editTextPatronymic"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/student_patronymic_hint"
        android:singleLine="true"
        android:inputType="textCapSentences" />

    <EditText
        android:id="@+id/editTextDob"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/student_dob_hint"
        android:singleLine="true" />

    <Button
        android:id="@+id/buttonAddPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/student_add_photo" />

</LinearLayout>